# PromptGrimoireTool

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  404.html  AGENTS.md  Becky Bennett (2).json  CLAUDE.md  Dockerfile.act  LICENSE  PRD.md  RALPH-HTML-WHITESPACE.md  README.md  WIP.md  alembic.ini  algolia-verification.html  benchmark_word_based.txt  biome.json  dba-review-wip.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  repro.py  run.py  run_prod.py  spike_two_pass.py  test_repro.py  vitest.config.js
.claude/: hookify.block-create-all.md  hookify.debug-statements.md  hookify.e2e-js-injection.md  hookify.no-spec-weakening.md  hookify.pause-before-easy-mode.md  hookify.warn-migration-edits.md  settings.json  settings.local.json
.claude-review/: phase1-charac-tests-codex.md
.claude/hooks/: final_lint.py  pre_pr_and_merge.py  python_lint.py
.claude/plans/: code-review-phase5-uat-polish.md  code-review-tag-lifecycle-day1.md  code-review-wargame-schema-phase1.md  dialog-canary-hypothesis.md
.codex/: phase1-charac-test-audit.md
.ed3d/: design-plan-guidance.md  implementation-plan-guidance.md  plugin-checklist.md  worktree-setup.md
.github/: PR_GUIDELINES.md  pull_request_template.md
.github/workflows/: act-ci.yml  ci.yml  ci.yml.disabled  nightly-e2e-slow.yml
.serena/: memories  project.yml
.serena/memories/: issue-101-checkpoint-2026-02-01.md  issue-101-checkpoint-2026-02-03.md  issue-101-execution-notes.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
ai_transcripts/: .session_manifest.json  CATALOG.json
ai_transcripts/2026-01-15-spike-1-crdt-nicegui-websocket-sync/: .last_size  .title  index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  raw-transcript.jsonl  session.meta.json
ai_transcripts/2026-01-15-spike-2-code-review-and-hardening/: .last_size  .title  c6ee6a00-7b0f-4ea5-abbf-86617c7fd63a.jsonl  index.html  page-001.html  page-002.html  page-003.html  session.meta.json
ai_transcripts/2026-02-02-blns-unicode-pdf-export-debugging/: .last_size  .title  index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html  page-011.html  page-012.html  raw-transcript.jsonl  session.meta.json
alembic/: env.py
alembic/versions/: 002b41705e53_add_tag_tables_and_policy.py  0405a9085ccf_add_turn_cycle_columns.py  064c301121d4_add_is_staff_to_course_role.py  1184bd94f104_add_sharing_columns.py  16f0dc427e7f_drop_annotation_document_state_table.py  1b59ab790954_add_wargame_schema.py  2b3157aeff45_add_copy_protection_fields.py  2cef9ec5dc10_add_fts_infrastructure.py  393bc4616071_add_highlight_tables.py  3cb720ee7a4f_add_permission_can_edit.py  3fe78447b221_add_activity_and_workspace_placement.py  4ac592c459a3_drop_workspace_created_by.py  5828b9110822_add_workspace_table.py  59d4ef6caf5d_create_user_class_conversation_tables.py  5a677de22f52_add_annotation_document_state.py  5cfeecc45356_add_acl_entry_table.py  6d21ba550579_normalise_course_role_to_fk.py  6e7f4b2ac3e7_add_paragraph_numbering_columns.py  6eb4a98f77dc_add_tag_group_color_check.py  7abc07630af3_add_user_ban_fields.py  7c50e4641d69_add_acl_reference_tables.py  8da58dddd990_drop_class_and_conversation_tables.py  91eee643d54f_add_source_document_id_to_workspace_.py  995de44465b7_add_cascade_delete_to_foreign_keys.py  9a0b954d51bf_add_source_type_remove_raw_content.py  9e0deda2d47a_merge_tag_group_color_and_sharing_.py  9eebaa40c9fd_merge_turn_cycle_and_student_enrolment.py  a124e721864c_add_unique_constraints_to_course_.py  a1b2c3d4e5f6_add_export_job_tables.py  a1b2c3d4e5f6_add_source_document_id_to_workspace_document.py  ada0cc41422f_add_sharing_anonymity_columns.py  adb0f2ee06fa_add_course_week_enrollment_tables.py  b0f92eaf26aa_add_word_count_fields.py  c08959d80031_merge_migration_heads_after_rebase.py  e58dbaf9d182_refactor_enrollment_to_use_user_id_fk.py  e6d13cc23848_drop_highlight_tables.py  e7ae5e81631d_add_workspace_tag_order_counters.py  ec22ee16be5d_add_color_column_to_tag_group.py  f7f6dd2b12c5_add_course_default_instructor_permission.py  (+2 more)
browserstack/: firefox.yml  safari.yml  supported.yml  unsupported.yml
deploy/: 503.http  check-export-queue.sh  check-pg-connections.sh  check-replication-lag.sh  collect-telemetry.sh  lag-watchdog.sh  promptgrimoire-worker.service  restart.sh
docs/: ARCHITECTURE.md  _index.md  ancient-history-annotation-tool-prd.md  annotation-architecture.md  case-brief-tool-prd.md  case-brief-ux-decisions.md  ci-runners.md  configuration.md  copy-protection.md  course-week-rbac.md  database.md  dependency-rationale.md  deployment.md  dfd-annotation-pipeline.md  dfd-reference.md  e2e-debugging.md  export.md  input-pipeline.md  latex-test-audit.md  logging.md  migration-checklist.md  pdf-export-e2e-test-notes.md  pdf-export-odt-annotations.md  pdf-export-test-spec.md  testing.md  timeline.md  translation-annotation-tool-prd.md  uat-walkthrough-96.md  worktrees.md
docs/aaf/: oidc-integration.md  (+2 more)
instructor-setup/: index.html
prompts/: CODE_REVIEW.md
scripts/: analyse_fixture.py  anonymise_chats.py  backfill_paragraph_maps.py  baseline_377.json  baseline_377_with_interactions.json  batch_validate_exports.sh  classify_slot_errors.py  env.claude-code-async  extract_anthropic_console_to_json.py  extract_workspace.py  extract_workspace.sh  fetch_export_logs.py  generate_docs_index.py  html_to_pdf.py  incident_db.py  jsonl_to_md.py  profile_workspace.py  prune_orphan_pyc.py  rehydrate_workspace.py  save_chat.sh  save_clipboard_fixture.py  screenshot_page.py  setup-claude-code-env.sh  setup_latex.py  smoke_turn_cycle.py  spike_contenteditable.py  spike_js_handler.py  spike_selectolax_text.py  spike_ui_editor.py  test_odt_annotations.py  test_pdf_export.py
search/: search_index.json
student-workflow/: index.html
tests/: __init__.py  conftest.py  test-pseudocode.md
using-promptgrimoire/: index.html
your-personal-grimoire/: index.html
(+1570 files in other folders)
