[project]
name = "promptgrimoire"
version = "0.1.0"
description = "A collaborative tool for prompt iteration, annotation, and sharing in educational contexts"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Ballsun-Stanton", email = "brian.ballsun-stanton@mq.edu.au" },
]
keywords = ["ai", "education", "prompts", "annotation", "collaboration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "nicegui>=2.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pycrdt>=0.10",
    "stytch>=11.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "asyncpg>=0.30",
    "anthropic>=0.76.0",
    "alembic>=1.18.0",
    "pytest-xdist[psutil]>=3.8.0",
    "ast-grep-cli>=0.40.5",
    "rich>=14.3.1",
    "lorem-text>=3.0",
    "bs4>=0.0.2",
    "odfdo>=3.19.0",
    "selectolax>=0.4.6",
    "html5lib>=1.1",
    "pylatexenc>=2.10",
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "playwright>=1.49",
    "pre-commit>=4.0",
    "ruff>=0.9",
    "alembic>=1.14",
]

[project.scripts]
promptgrimoire = "promptgrimoire:main"
test-debug = "promptgrimoire.cli:test_debug"
test-all = "promptgrimoire.cli:test_all"
set-admin = "promptgrimoire.cli:set_admin"
show-export-log = "promptgrimoire.cli:show_export_log"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptgrimoire"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # Allow imports inside test functions (needed for mocking)
]
"src/promptgrimoire/auth/factory.py" = [
    "PLC0415",  # Intentional lazy imports for conditional client loading
]
"src/promptgrimoire/__init__.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies at startup
]
"src/promptgrimoire/llm/lorebook.py" = [
    "PLC0415",  # Import inside function to avoid circular imports with models
]
"src/promptgrimoire/pages/case_tool.py" = [
    "PLR0915",  # Page function needs many statements for UI setup
    "SIM117",   # Nested with is cleaner for NiceGUI UI composition
]
"src/promptgrimoire/pages/live_annotation_demo.py" = [
    "PLR0915",  # Page function needs many statements for UI setup
    "SIM117",   # Nested with is cleaner for NiceGUI UI composition
    "PLC0415",  # Late imports to avoid circular dependencies
]
"src/promptgrimoire/pages/courses.py" = [
    "PLR0915",  # Page function needs many statements for UI setup
    "SIM117",   # Nested with is cleaner for NiceGUI UI composition
]
"src/promptgrimoire/crdt/annotation_doc.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with persistence
]
"src/promptgrimoire/crdt/persistence.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with db
    "PLW0603",  # Global singleton pattern is intentional
]
"src/promptgrimoire/cli.py" = [
    "PLC0415",  # Late import of pytest for CLI commands
]
"alembic/versions/*.py" = [
    "TC003",  # Alembic generates imports outside TYPE_CHECKING block
]

[tool.ruff.lint.isort]
known-first-party = ["promptgrimoire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
# Run tests in this order: unit first (fast, async), integration, then E2E
# This prevents event loop conflicts between pytest-asyncio and playwright
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests requiring Playwright browsers",
]

[tool.coverage.run]
source = ["src/promptgrimoire"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ty.src]
exclude = ["alembic/"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylatexenc>=2.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.11",
]
