[project]
name = "promptgrimoire"
version = "0.1.0"
description = "A collaborative tool for prompt iteration, annotation, and sharing in educational contexts"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Ballsun-Stanton", email = "brian.ballsun-stanton@mq.edu.au" },
]
keywords = ["ai", "education", "prompts", "annotation", "collaboration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "nicegui==3.6.1",  # pinned: 3.7.x re-renders elements on listener change, destroying JS event wiring
    "sqlmodel>=0.0.22",
    "pycrdt>=0.10",
    "stytch>=11.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",  # Required by pydantic-settings for .env file reading
    "asyncpg>=0.30",
    "anthropic>=0.76.0",
    "alembic>=1.18.0",
    "selectolax>=0.4.6",
    "emoji>=2.0.0",
    "lxml>=6.0",
    "coolname>=3.0.0",
]

[project.scripts]
promptgrimoire = "promptgrimoire:main"
test-changed = "promptgrimoire.cli:test_changed"
test-all = "promptgrimoire.cli:test_all"
test-e2e = "promptgrimoire.cli:test_e2e"
test-e2e-slow = "promptgrimoire.cli:test_e2e_slow"
test-e2e-noretry = "promptgrimoire.cli:test_e2e_noretry"
test-e2e-changed = "promptgrimoire.cli:test_e2e_changed"
test-all-fixtures = "promptgrimoire.cli:test_all_fixtures"
seed-data = "promptgrimoire.cli:seed_data"
set-admin = "promptgrimoire.cli:set_admin"
manage-users = "promptgrimoire.cli:manage_users"
show-export-log = "promptgrimoire.cli:show_export_log"
load-test-data = "promptgrimoire.cli_loadtest:load_test_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptgrimoire"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # Allow imports inside test functions (needed for mocking)
]
"src/promptgrimoire/auth/factory.py" = [
    "PLC0415",  # Intentional lazy imports for conditional client loading
]
"src/promptgrimoire/__init__.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies at startup
]
"src/promptgrimoire/llm/lorebook.py" = [
    "PLC0415",  # Import inside function to avoid circular imports with models
]
"src/promptgrimoire/pages/courses.py" = [
    "PLR0915",  # Page function needs many statements for UI setup
    "SIM117",   # Nested with is cleaner for NiceGUI UI composition
]
"src/promptgrimoire/crdt/annotation_doc.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with persistence
]
"src/promptgrimoire/db/workspaces.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with crdt
]
"src/promptgrimoire/db/tags.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with workspaces/crdt
]
"src/promptgrimoire/crdt/persistence.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with db
    "PLW0603",  # Global singleton pattern is intentional
]
"src/promptgrimoire/cli.py" = [
    "PLC0415",  # Late import of pytest for CLI commands
]
"alembic/versions/*.py" = [
    "TC003",  # Alembic generates imports outside TYPE_CHECKING block
]

[tool.ruff.lint.isort]
known-first-party = ["promptgrimoire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
# Run tests in this order: unit first (fast, async), integration, then E2E
# This prevents event loop conflicts between pytest-asyncio and playwright
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q -m 'not blns and not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests requiring Playwright browsers",
    "blns: marks Big List of Naughty Strings tests (opt-in with '-m blns')",
    "latex: marks tests requiring TinyTeX and system fonts (skip with '-m \"not latex\"')",
]
filterwarnings = [
    # SQLModel session.execute() warning handled in tests/conftest.py
]

[tool.ty.src]
exclude = ["alembic/"]

[tool.bandit]
  skips = ["B101", "B404", "B603", "B607"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.2",
    "pylatexenc>=2.10",
    "pymupdf>=1.26.7",
    "rich>=14.3.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-depper>=0.2.0",
    "pytest-order>=1.3.0",
    "pytest-playwright>=0.7.2",
    "pytest-subtests>=0.15.0",
    "pytest-xdist[psutil]>=3.8.0",
    "ast-grep-cli>=0.40.5",
    "ruff>=0.14.11",
    "pytest-randomly>=4.0.1",
    "py-spy>=0.4.1",
    "pysnooper>=1.2.3",
    "pytest-sugar>=1.1.1",
    "junitparser>=4.0.2",
    "pytest-rerunfailures>=16.1",
]
