[project]
name = "promptgrimoire"
version = "0.1.0"
description = "A collaborative tool for prompt iteration, annotation, and sharing in educational contexts"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Ballsun-Stanton", email = "brian.ballsun-stanton@mq.edu.au" },
]
keywords = ["ai", "education", "prompts", "annotation", "collaboration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "nicegui==3.8.0",  # pinned: 3.8.0 includes our upstream fixes (#5805, #5806, #5749)
    "sqlmodel>=0.0.22",
    "pycrdt>=0.10",
    "stytch>=11.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",  # Required by pydantic-settings for .env file reading
    "asyncpg>=0.30",
    "anthropic>=0.76.0",
    "alembic>=1.18.0",
    "selectolax>=0.4.6",
    "emoji>=2.0.0",
    "lxml>=6.0",
    "coolname>=3.0.0",
    "uniseg>=0.10.1",
    "jieba>=0.42.1",
    "mecab-python3>=1.0.12",
    "unidic-lite>=1.0.8",
    "typer>=0.15.0",
    "cryptography>=46.0.5",
]

[project.scripts]
promptgrimoire = "promptgrimoire:main"
grimoire = "promptgrimoire.cli:app"
load-test-data = "promptgrimoire.cli_loadtest:load_test_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptgrimoire"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "S404",     # subprocess import (CLI tooling uses subprocess intentionally)
    "S603",     # subprocess call without shell check (controlled args in CLI)
    "S607",     # partial executable path (uv, playwright, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # Allow imports inside test functions (needed for mocking)
    "S101",     # Assertions are the primary test mechanism
    "S105",     # Hardcoded test tokens/passwords are intentional in test fixtures
    "S106",     # Hardcoded test tokens passed as arguments are intentional
    "S108",     # /tmp paths in test config are intentional
    "S110",     # Bare except:pass used in test cleanup/teardown
    "S310",     # URL open in test fixtures uses controlled localhost URLs
]
"src/promptgrimoire/export/pandoc.py" = [
    "S101",     # Assert after proc.communicate() — returncode guaranteed non-None
]
"src/promptgrimoire/pages/auth.py" = [
    "S101",     # Type-narrowing asserts after _validate_token guarantees
    "S105",     # False positive: token_type == "sso" is not a hardcoded password
]
"src/promptgrimoire/auth/mock.py" = [
    "S105",     # Mock auth module — hardcoded test tokens are intentional
    "S324",     # md5 used for deterministic ID generation, not cryptographic purposes
]
"src/promptgrimoire/auth/factory.py" = [
    "PLC0415",  # Intentional lazy imports for conditional client loading
]
"src/promptgrimoire/__init__.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies at startup
]
"src/promptgrimoire/llm/lorebook.py" = [
    "PLC0415",  # Import inside function to avoid circular imports with models
]
"src/promptgrimoire/pages/annotation/workspace.py" = [
    "S101",     # Type-narrowing asserts for permission validation and state guards
]
"src/promptgrimoire/pages/annotation/content_form.py" = [
    "S608",     # False positive: f-string constructs HTML/JS, not SQL
]
"src/promptgrimoire/pages/roleplay.py" = [
    "S108",     # /tmp path for transient file upload parsing
]
"src/promptgrimoire/pages/sync_demo.py" = [
    "S110",     # Bare except:pass — client may have disconnected
]
"src/promptgrimoire/pages/courses.py" = [
    "PLR0915",  # Page function needs many statements for UI setup
    "SIM117",   # Nested with is cleaner for NiceGUI UI composition
]
"src/promptgrimoire/crdt/annotation_doc.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with persistence
]
"src/promptgrimoire/db/workspaces.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with crdt
]
"src/promptgrimoire/db/navigator.py" = [
    "S608",     # f-string SQL interpolates only module constants; user input is :query bound
]
"src/promptgrimoire/db/tags.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with workspaces/crdt
]
"src/promptgrimoire/crdt/persistence.py" = [
    "PLC0415",  # Late imports to avoid circular dependencies with db
    "PLW0603",  # Global singleton pattern is intentional
]
"src/promptgrimoire/cli/admin.py" = [
    "PLC0415",  # Late imports to avoid heavy DB/auth modules at CLI load time
]
"src/promptgrimoire/cli/migrate.py" = [
    "PLC0415",  # Late imports to avoid heavy DB/CRDT modules at CLI load time
]
"src/promptgrimoire/cli/seed.py" = [
    "PLC0415",  # Late imports to avoid heavy DB modules at CLI load time
]
"src/promptgrimoire/cli/_shared.py" = [
    "PLC0415",  # Deferred imports in _pre_test_db_cleanup to avoid heavy DB modules at CLI load time
]
"src/promptgrimoire/cli/docs.py" = [
    "PLC0415",  # Late imports to avoid heavy Playwright/subprocess modules at CLI load time
]
"src/promptgrimoire/cli/testing.py" = [
    "PLC0415",  # Deferred config import to avoid pydantic-settings loading at import time
]
"src/promptgrimoire/cli/e2e/__init__.py" = [
    "PLC0415",  # Deferred imports to avoid heavy config/parallel modules at CLI load time
]
"src/promptgrimoire/cli/e2e/_server_script.py" = [
    # Standalone subprocess script — not a regular importable module.
    # Intentional late imports, module-level side effects, global state.
    "PLC0415", "E402", "I001", "B023", "PTH123", "ARG001",
    "SIM115", "PLR0915", "PLW0602", "PLW0603", "RUF100",
    # Security rules: intentional test secrets, /tmp paths, bare except.
    "S101", "S105", "S106", "S108", "S110",
]
"src/promptgrimoire/cli_loadtest.py" = [
    "S311",     # Test fixture generation uses pseudo-random, not crypto
]
"scripts/save_clipboard_fixture.py" = [
    "S311",     # Dev script uses pseudo-random for lorem ipsum, not crypto
]
"alembic/versions/*.py" = [
    "TC003",  # Alembic generates imports outside TYPE_CHECKING block
]

[tool.ruff.lint.isort]
known-first-party = ["promptgrimoire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
# Run tests in this order: unit first (fast, async), integration, then E2E
# This prevents event loop conflicts between pytest-asyncio and playwright
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q -m 'not blns and not slow and not perf'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests requiring Playwright browsers",
    "nicegui_ui: marks in-process NiceGUI user_simulation UI tests",
    "blns: marks Big List of Naughty Strings tests (opt-in with '-m blns')",
    "perf: marks performance baseline tests (skip with '-m \"not perf\"')",
    "latex: marks tests requiring TinyTeX and system fonts (skip with '-m \"not latex\"')",
    "latexmk_full: marks full compiled-PDF suites that `test all` deselects",
    "cards: marks card-touching annotation E2E tests (run with 'uv run grimoire e2e cards')",
]
filterwarnings = [
    # SQLModel session.execute() warning handled in tests/conftest.py
]

[tool.ty.rules]
# SQLModel marks session.execute as @deprecated, recommending session.exec.
# But exec cannot handle raw text SQL, upserts, deletes, or locking clauses.
# Raw SQL is a core pattern in this codebase, so suppress globally. See #199.
deprecated = "ignore"

[tool.ty.src]
exclude = ["alembic/"]

[tool.vulture]
paths = ["src/promptgrimoire"]
exclude = ["*/migrations/*"]
min_confidence = 80

[tool.complexipy]
paths = ["src/promptgrimoire"]
max_complexity_allowed = 15
exclude = ["*/migrations/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.2",
    "pylatexenc>=2.10",
    "pymupdf>=1.26.7",
    "rich>=14.3.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-depper>=0.2.0",
    "pytest-order>=1.3.0",
    "pytest-playwright>=0.7.2",
    "pytest-subtests>=0.15.0",
    "pytest-xdist[psutil]>=3.8.0",
    "ast-grep-cli>=0.40.5",
    "ruff>=0.15.5",
    "pytest-randomly>=4.0.1",
    "py-spy>=0.4.1",
    "pysnooper>=1.2.3",
    "pytest-sugar>=1.1.1",
    "junitparser>=4.0.2",
    "pytest-rerunfailures>=16.1",
    "Pillow>=11.0",
    "mkdocs-material>=9.7",
    "vulture>=2.14",
    "complexipy>=5.2.0",
    "mkdocs-glightbox>=0.5.2",
    "pip-audit>=2.10.0",
]
